# flyProject

./: README.md
Drawing/Shell/: 28BYJ-48 stepper motor.scdoc  28BYJ-48 stepper motor.scdocx  6 color wheel.scdoc  6 color wheel.scdocx  6 color wheel.stl  Camera.scdoc  Camera.scdocx  back.dwg  buttom.dxf  color circle.SLDPRT  color wheel.stp  front.dwg  top.dxf
Polarization_image/: polarization_image.py
PolarizerCamera/: app.py  camera.py  read_stoke.py
PolarizerCamera/Picture/: 50度S0.npy  50度S1.npy  50度S2.npy  Init_raw_image_3.tiff  None_raw_image_1.tiff  None_raw_image_2.tiff  closeS0.npy  closeS1.npy  closeS2.npy  測試S0.npy  測試S1.npy  測試S2.npy
PolarizerCamera/templates/: index.html
read_tiffandraw/: read_raw.py  read_tiff.py
stepmotor/: CMakeLists.txt
stepmotor/src/: motor.c
